Refactor: Update postCreateCommand to use setup script for ragora installation
Replace direct pip install command with a dedicated setup script to configure the ragora environment, including PATH adjustments and installation verification.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,6 +23,6 @@
 		"ms-python.black-formatter",
 		"eamodio.gitlens"
 	],
-	"postCreateCommand": "pip install ragora",
+	"postCreateCommand": ".devcontainer/post_create_scripts/setup_ragora.sh",
 	"remoteUser": "vscode"
 }
